RESOLVED FIXED310575
docs.github.com: Find in page scrolls to wrong location
https://bugs.webkit.org/show_bug.cgi?id=310575
Summary docs.github.com: Find in page scrolls to wrong location
ccarley2
Reported 2026-03-23 14:21:07 PDT
The first four matches have Safari scroll to the bottom of the TOC, whereas they actually occur within the TOC.
Attachments
ccarley2
Comment 1 2026-03-23 14:21:08 PDT
ccarley2
Comment 2 2026-03-23 14:32:11 PDT
EWS
Comment 3 2026-03-25 10:04:52 PDT
Committed 309923@main (ba1daf397dd0): <https://commits.webkit.org/309923@main> Reviewed commits have been landed. Closing PR #61195 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.