docs.github.com: Find in page scrolls to wrong location rdar://170477571 https://bugs.webkit.org/show_bug.cgi?id=310575

Reviewed by Ryosuke Niwa.

The problem is that WebFoundTextRangeController::scrollTextRangeToVisible
relies on VisualSelection to scroll. Some matches may not produce a valid
selection (typically due to elements styled with user-select: none), so during the canonicalization process, the range is collapsed,
and scrolling is broken.

The FindController uses FrameSelection::revealSelection, which calls
LocalFrameView::scrollRectToVisible. This approach does not rely on whether
we have a valid selection or not. The solution was to copy this approach
and call LocalFrameView::scrollRectToVisible directly in
WebFoundTextRangeController::scrollTextRangeToVisible.

* Source/WebKit/WebProcess/WebPage/WebFoundTextRangeController.cpp:
(WebKit::WebFoundTextRangeController::scrollTextRangeToVisible):
(WebKit::WebFoundTextRangeController::simpleRangeFromFoundTextRange):

I have added an API test, WebKit.ScrollToUserSelectNoneFoundRange to
exercise the new code path. Without my changes, the test times out
waiting for scroll.
* Tools/TestWebKitAPI/Tests/WebKitCocoa/FindInPage.mm:
(TEST(WebKit, ScrollToUserSelectNoneFoundRange)):

Canonical link: https://commits.webkit.org/309923@main