Source/WebKit/WebProcess/WebPage/WebFoundTextRangeController.cpp
@@ -52,6 +52,8 @@
 #include <WebCore/PageOverlayController.h>
 #include <WebCore/PathUtilities.h>
 #include <WebCore/PlatformMouseEvent.h>
+#include <WebCore/RenderLayer.h>
+#include <WebCore/RenderObject.h>
 #include <WebCore/SimpleRange.h>
 #include <WebCore/TextIterator.h>
 #include <ranges>
@@ -253,17 +255,20 @@ void WebFoundTextRangeController::scrollTextRangeToVisible(const WebFoundTextRan
             if (!simpleRange)
                 return;
 
-            RefPtr document = documentForFoundTextRange(range);
-            if (!document)
+            auto rects = WebCore::RenderObject::absoluteTextRects(*simpleRange);
+            if (rects.isEmpty())
                 return;
 
-            WebCore::VisibleSelection visibleSelection(*simpleRange);
-            OptionSet temporarySelectionOptions { WebCore::TemporarySelectionOption::DelegateMainFrameScroll, WebCore::TemporarySelectionOption::RevealSelectionBounds, WebCore::TemporarySelectionOption::DoNotSetFocus, WebCore::TemporarySelectionOption::UserTriggered };
+            CheckedPtr renderer = simpleRange->startContainer().renderer();
+            if (!renderer)
+                return;
 
-            if (document->isTopDocument())
-                temporarySelectionOptions.add(WebCore::TemporarySelectionOption::SmoothScroll);
+            WebCore::ScrollRectToVisibleOptions options;
+            RefPtr document = documentForFoundTextRange(range);
+            if (document && document->isTopDocument())
+                options.behavior = WebCore::ScrollBehavior::Smooth;
 
-            WebCore::TemporarySelectionChange selectionChange(*document, visibleSelection, temporarySelectionOptions);
+            WebCore::LocalFrameView::scrollRectToVisible(WebCore::LayoutRect(unionRect(rects)), *renderer, false, options);
         },
         [&] (const WebKit::WebFoundTextRange::PDFData& pdfData) {
 #if ENABLE(PDF_PLUGIN)
